--- a/src/components/SportsSelectionCard2/index.module.scss
+++ b/src/components/SportsSelectionCard2/index.module.scss
@@ -172,6 +172,11 @@
           display: flex;
           flex-direction: column;
           justify-content: space-evenly;
+          border-left: 3px solid $lightBlue;
+
+          &.active {
+            border-color: $primary;
+          }
 
           .card_state_title {
             display: flex;
@@ -316,6 +321,12 @@
             margin-right: 5px;
           }
         }
+      }
+    }
+
+    .forwardArrow {
+      &:hover {
+        cursor: pointer;
       }
     }
   }
