--- a/src/pages/MLBpowerdFS/index.module.scss
+++ b/src/pages/MLBpowerdFS/index.module.scss
@@ -90,6 +90,9 @@
             font-size: 16px;
             width: 80%;
             text-align: center;
+            color: $grey2;
+            font-family: Poppins;
+            opacity: 0.95;
           }
         }
 
