--- a/src/components/ContestRulesPopUp/styles.module.scss
+++ b/src/components/ContestRulesPopUp/styles.module.scss
@@ -107,18 +107,31 @@
         }
     }
 }
+.popupWrapper{
+    position: absolute;
+    z-index: 10;
+    top: 0;
+}
 .popup{
     padding: 7.142rem;
     border-radius: 0.8571rem;
     background: $lightBlack;
     box-shadow: 0 2px 44px 0 rgba(0, 0, 0, 0.5);
-    max-width: 72.36%;
-    position: relative;
+    width: 72.36%;
     z-index: 1;
     top: 0 !important;
-    margin: 5.5rem 0 8rem 0;
+    margin: 5.5rem auto 8rem auto;
+    position: relative;
+    top: 0;
 }
-
+.blur{
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba($color: #000000, $alpha: 0.5);
+}
 .title{
     margin-top: -3rem;
 }
