--- a/src/ui/ChooseItem/styles.module.scss
+++ b/src/ui/ChooseItem/styles.module.scss
@@ -23,11 +23,12 @@
 .title{
     font-size: 1.428rem;
     font-weight: 600;
+    line-height: 0.7em;
 }
 .underLine{
     position: absolute;
     right: 0;
-    bottom: 0;
+    bottom: -0.0715rem;
     border-radius: 0.143rem;
     width: calc(100% + 0.0715rem);
     height: 0.2857rem;
@@ -37,6 +38,9 @@
     transition: 0.15s all linear;
 }
 .helperText{
-    color: rgba($color: #000000, $alpha: 0.5);
-    line-height: 1.2em;
+    color: rgba($color: #0000, $alpha: 0.5);
+    font-size: 0.857rem;
+    font-weight: 600;
+    margin-top: 0.75em;
+    line-height: 1em;
 }
