--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -32,6 +32,8 @@ $lightGrey3: #f7f7f7;
 $lightGrey4: #a7a7a7;
 $lightGrey5: #ffffff0d;
 $lightGrey6: #f2f2f21f;
+$lightGrey7: #d8d8d824;
+$lightGrey8: #ffffff57;
 $black2: #17181a;
 $black3: #111111cc;
 $black4: #11111199;
@@ -73,4 +75,5 @@ $lightBlue2: #8cc2ff;
 $lightBlue3: #6890bd7c;
 $lightBlue4: #6890bde5;
 $lightBlue5: #6890bd3f;
+$lightBlue6: #688fbd33;
 $divider: #efefef;
