--- a/src/ui/ChooseItem/styles.module.scss
+++ b/src/ui/ChooseItem/styles.module.scss
@@ -1,13 +1,12 @@
 @import '../../scss/colors.scss';
 .root{
-    display: block;
     width: 7.143rem;
     height: 5.143rem;
     border: solid 0.0715rem $lightGrey2;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     border-radius: 0.143rem;
     cursor: pointer;
     position: relative;
@@ -23,7 +22,11 @@
 .title{
     font-size: 1.428rem;
     font-weight: 600;
-    line-height: 0.7em;
+    padding-top: 0.143rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-gap: 0.2em;
 }
 .underLine{
     position: absolute;
@@ -41,6 +44,4 @@
     color: rgba($color: #0000, $alpha: 0.5);
     font-size: 0.857rem;
     font-weight: 600;
-    margin-top: 0.75em;
-    line-height: 1em;
 }
