--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -50,6 +50,8 @@ $grey8: #3e4345;
 $grey9: #7f7f7f;
 $grey10: #f2f2f21a;
 $grey11: #f2f2f2bf;
+$grey12: #e4e4e4;
+$grey13: #f2f2f2b3;
 $lightGreen: #1bbc8633;
 $alertPrimary: #fb6e0026;
 $alertSuccess: #1bbc8626;
@@ -65,6 +67,7 @@ $successLight2: #2b69301a;
 $successLight3: #214f2480;
 $successLight4: #214f24;
 $green: #4bb654;
+$green2: #3f9946;
 $yellow: #fbbc15;
 $orangeRed: #f44336;
 $offwhite: #e0e0e0;
