--- a/src/components/Header4/index.module.scss
+++ b/src/components/Header4/index.module.scss
@@ -146,32 +146,33 @@
 
     .header_bottom_r {
       display: flex;
+      align-items: center;
 
       .divider {
         background-color: $grey;
         border: 1px solid $grey;
         opacity: 0.4;
         width: 1px;
-        min-height: 100%;
+        height: 50px;
       }
 
       .footer_section {
         display: flex;
         justify-content: center;
         align-items: center;
-        // padding: 0 20px;
         width: 188px;
-        height: 100%;
+        // height: 50px;
+        // background-color: aliceblue;
 
         img {
           width: 42px;
           height: 42px;
-          margin: 0 12px 0 0;
+          margin: 0 12px 2px 0;
           padding: 0;
         }
 
         svg {
-          margin: 0 12px 0 0;
+          margin: 0 12px 0px 0;
           padding: 0;
         }
 
@@ -188,12 +189,18 @@
             font-size: 22px;
             font-weight: 600;
             color: $grey2;
+            line-height: 18px;
+
+            &.margin {
+              margin-top: 7px;
+            }
           }
           span {
             color: $white;
             opacity: 0.6;
+            font-family: Poppins;
             font-size: 12px;
-            transform: translateY(-2px);
+            font-weight: normal;
           }
         }
       }
