--- a/src/pages/MLBPowerdfsLive/index.module.scss
+++ b/src/pages/MLBPowerdfsLive/index.module.scss
@@ -4,14 +4,54 @@
   display: flex;
   flex-direction: column;
 
+  .currentState {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    color: $green2;
+    font-family: Teko;
+    font-size: 22px;
+    font-weight: 600;
+    margin-right: 31px;
+
+    .orb {
+      width: 10px;
+      height: 10px;
+      background-color: $green2;
+      border-radius: 50%;
+      margin-right: 7px;
+      transform: translateY(-2px);
+    }
+
+    &.column {
+      flex-direction: column;
+      color: $primary;
+      line-height: 18px;
+      margin-top: 7px;
+    }
+
+    .span_text {
+      opacity: 0.6;
+      font-family: Poppins;
+      font-size: 12px;
+      color: $white;
+      padding: 0;
+      margin: 0;
+      font-weight: normal;
+    }
+  }
+
   .container {
     display: flex;
     padding: 0 0 0 50px;
     position: relative;
 
     .container_left_side {
-      width: 71%;
+      flex: 0.68;
       margin-bottom: 50px;
+      margin-left: 80px;
 
       > div {
         display: flex;
