--- a/src/pages/Login/index.module.scss
+++ b/src/pages/Login/index.module.scss
@@ -2,7 +2,9 @@
 
 .wrapper {
   margin: 50px 0 0 0;
-
+  .form{
+    margin-bottom: 3rem;
+  }
   .back_drop {
     background-color: rgba(0, 0, 0, 0.6);
     position: absolute;
@@ -18,10 +20,12 @@
     display: flex;
     flex-direction: row;
     overflow: hidden;
+    align-items: center;
 
     .header_image {
       width: 637px;
       height: 569px;
+      margin-top: auto;
     }
 
     .header_content {
@@ -45,8 +49,9 @@
       .header_p {
         font-size: 18px;
         font-weight: 500;
-        width: 40%;
+        width: 41rem;
         text-align: center;
+        max-width: 90%;
       }
     }
   }
@@ -70,32 +75,31 @@
 
     .content_card {
       background-color: $grey2;
-      width: 34%;
       margin: 0 auto;
       border-radius: 7px;
       transform: translate(0, -60%);
       box-shadow: 0px 12px 30px 3px rgba(0, 0, 0, 0.5);
-      padding: 60px 50px;
-
-      .login_btn {
-        margin: 0px auto;
-        width: 75%;
-        height: 80px;
-        position: absolute;
-        transform: translate(2.5%, 50%);
-        margin: 0;
-        padding: 0;
-        font-size: 24px;
-        text-transform: uppercase;
-      }
+      width: 33.285rem;
+      max-width: 90%;
+    }
+    .login_btn {
+      height: 80px;
+      margin: 0;
+      padding: 0;
+      font-size: 24px;
+      text-transform: uppercase;
+      border: none;
+      position: relative;
+      top: 4.3rem;
+      margin-bottom: -1.45rem;
+      width: 25.714rem;
+      max-width: 90%;
     }
 
     .content_footer_p {
-      margin: 0;
-      padding: 0;
       transform: translate(0, -500%);
       text-align: center;
-      font-size: 14px;
+      font-size: 1rem;
 
       a {
         text-decoration: underline;
@@ -103,8 +107,7 @@
     }
   }
 }
-
-@media only screen and (max-width: 1024px) {
+@media (max-width: 800px) {
   @import "../../scss/colors.scss";
 
   .wrapper {
@@ -153,153 +156,10 @@
         }
       }
     }
-
-    .content_wrapper {
-      background-color: $lightBlack;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      position: relative;
-      align-items: center;
-
-      .content_top_skew {
-        display: none;
-      }
-
-      .content_card {
-        background-color: $grey2;
-        width: 96%;
-        margin: 0 auto;
-        border-radius: 7px;
-        transform: translate(0, -10%);
-        box-shadow: 0px 12px 30px 3px rgba(0, 0, 0, 0.5);
-        padding: 60px 15px;
-
-        .login_btn {
-          margin: 0px auto;
-          width: 75%;
-          height: 48px;
-          position: absolute;
-          transform: translate(11%, 115%);
-          margin: 0;
-          padding: 0;
-          font-size: 20px;
-          text-transform: uppercase;
-        }
-      }
-
-      .content_footer_p {
-        width: 50%;
-        margin: 50px auto;
-        padding: 0;
-        transform: translate(0, 0);
-        text-align: center;
-        font-size: 14px;
-
-        a {
-          text-decoration: underline;
-        }
-      }
-    }
-  }
-}
-
-@media only screen and (max-width: 280px) {
-  @import "../../scss/colors.scss";
-
-  .wrapper {
-    margin: 50px 0 0 0;
-    width: 100%;
-
-    .back_drop {
-      display: none;
-    }
-
-    .header {
-      width: 100%;
-      background-color: #0a0a0a;
-      height: auto;
-      display: block;
-      flex-direction: unset;
-      overflow: hidden;
-
-      .header_image {
-        display: none;
-      }
-
-      .header_content {
-        position: relative;
-        margin: 40px 0 0 0;
-        width: 100%;
-        height: 50%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        .header_title {
-          background-color: $primary;
-          font-size: 18px;
-          font-weight: bold;
-          padding: 8px 11px;
-          border-radius: 6px;
-          text-shadow: 0px 1px 12px rgba(0, 0, 0, 0.5);
-        }
-
-        .header_p {
-          font-size: 16px;
-          font-weight: 500;
-          width: 100%;
-          text-align: center;
-        }
-      }
-    }
-
-    .content_wrapper {
-      background-color: $lightBlack;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      position: relative;
-      align-items: center;
-
-      .content_top_skew {
-        display: none;
-      }
-
-      .content_card {
-        background-color: $grey2;
-        width: 100%;
-        margin: 0 auto;
-        border-radius: 7px;
-        transform: translate(0, 0);
-        box-shadow: 0px 12px 30px 3px rgba(0, 0, 0, 0.5);
-        padding: 60px 15px;
-
-        .login_btn {
-          margin: 0px auto;
-          width: 100%;
-          height: 48px;
-          position: absolute;
-          transform: translate(-5.5%, 115%);
-          margin: 0;
-          padding: 0;
-          font-size: 20px;
-          text-transform: uppercase;
-        }
-      }
-
-      .content_footer_p {
-        width: 50%;
-        margin: 50px auto;
-        padding: 0;
-        transform: translate(0, 0);
-        text-align: center;
-        font-size: 14px;
-
-        a {
-          text-decoration: underline;
-        }
+    .content_wrapper{
+      .login_btn{
+        height: 48px;
+        top: 2rem;
       }
     }
   }
