--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,8 +2,9 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Teko&display=swap");
+
 @import "./colors.scss", "./flex.scss", "./layouts.scss", "./styles.scss",
-  "./stylescolors.scss";
+  "./stylescolors.scss" , './custom.scss';
 
 * {
   box-sizing: border-box;
