--- a/src/pages/MyGameCenter/MyGameCenter.scss
+++ b/src/pages/MyGameCenter/MyGameCenter.scss
@@ -1,171 +1,11 @@
 @import "../../scss/colors.scss";
 
-.__my_game_center {
-  .__my_game_center_banner {
-      background-image: url('../../assets/power-center-banner.png');
-      background-size: 100% auto;
-      background-position: center;
-
-      .__my_game_center_banner_left {
-          display: flex;
-          flex-direction: row;
-
-              .__my_game_center_banner_left_title_main {
-                  width: 602px;
-                  height: 96px;
-                  font-family: Teko;
-                  font-size: 96px;
-                  font-weight: bold;
-                  font-stretch: normal;
-                  font-style: normal;
-                  line-height: normal;
-                  letter-spacing: normal;
-                  text-align: center;
-                  color: $grey2;
-              }
-      }
-
-      .__my_game_center_banner_footer {
-          display: flex;
-          flex-direction: row;
-          justify-content: flex-end;
-          height: 50px;
-          margin-top: 60px;
-          background-color: $black5;
-
-          .__my_game_center_banner_footer_deposit {
-              display: flex;
-              width: 10%;
-              justify-content: center;
-              align-items: center;
-              font-family: Teko;
-              font-size: 22px;
-              font-weight: 600;
-              font-stretch: normal;
-              font-style: normal;
-              line-height: normal;
-              letter-spacing: normal;
-              text-align: center;
-              color: $grey2;
-              border-right: 1px solid $grey;
-              cursor: pointer;
-          }
-
-          .__my_game_center_banner_footer_cash_and_balance_outer {
-              display: flex;
-              width: 12%;
-              justify-content: center;
-              align-items: center;
-          }
-
-          .border_right {
-              border-right: 1px solid $grey;
-
-          }
-
-          .__my_game_center_banner_footer_cash_and_balance_icon {
-              margin-top: 4px;
-          }
-
-          .__my_game_center_banner_footer_cash_and_balance_inner {
-              margin-left: 7px;
-
-              .__my_game_center_banner_footer_power_and_cash_balance {
-                  width: 52px;
-                  height: 23px;
-                  font-family: Teko;
-                  font-size: 22px;
-                  font-weight: 600;
-                  font-stretch: normal;
-                  font-style: normal;
-                  line-height: normal;
-                  letter-spacing: normal;
-                  color: $grey2;
-              }
-  
-              .__my_game_center_banner_footer_power_and_cash_balance_title {
-                  width: 89px;
-                  height: 17px;
-                  opacity: 0.6;
-                  font-family: Poppins;
-                  font-size: 12px;
-                  font-weight: normal;
-                  font-stretch: normal;
-                  font-style: normal;
-                  line-height: normal;
-                  letter-spacing: normal;
-                  color: $white;
-              }
-          }
-
-          .__three_dots_div {
-              display: flex;
-              justify-content: flex-start;
-              align-items: center;
-              width: 40px;
-              z-index: 1;
-              .__three_dots {
-                  background: transparent;
-                  width: 20px;
-                  outline: none;
-                  border: none;
-                  padding: 0;
-                  display: block;
-                  
-                  > span {
-                  width: 4px;
-                  height: 4px;
-                  margin: 0 0 4px;
-                  border-radius: 3px;
-                  background-color: $primary;
-                  display: block;
-                  margin-left: 7px;
-                  }
-              }
-          }
-
-          .__currency_menu {
-              width: 190px;
-              height: 190px;
-              border-radius: 6px;
-              box-shadow: 0 2px 14px 0 $black5;
-              border: solid 1px $black;
-              background-color: $lightGrey;
-              z-index: 1;
-              position: absolute;
-              right: 20px;
-
-              :first-child {
-                  font-weight: 600;
-                  cursor: default;
-              }
-
-              div {
-                  display: flex;
-                  align-items: center;
-                  padding-left: 20px;
-                  width: 190px;
-                  height: 46px;
-                  font-family: Poppins;
-                  font-size: 16px;
-                  font-weight: 300;
-                  font-stretch: normal;
-                  font-style: normal;
-                  line-height: normal;
-                  letter-spacing: normal;
-                  color: $grey2;
-                  cursor: pointer;
-              }
-
-              .__currency_menu_item:hover {
-                  background-color: $lightBlue6;
-              }
-
-              .__currency_menu_selected {
-                  background-color: $lightBlue6;
-              }
-          }
-      }
+.__MyGameCenter {
+  .__viewport-large-title {
+    padding: 0.2em;
+    background-image: url("../../assets/PowerContest.jpg");
+    background-size: 100% auto;
+    background-position: center;
   }
 }
 
