--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -52,6 +52,8 @@ $grey8: #3e4345;
 $grey9: #7f7f7f;
 $grey10: #f2f2f21a;
 $grey11: #f2f2f2bf;
+$grey12: #1F1F1F;
+$grey13: #ffffff80;
 $lightGreen: #1bbc8633;
 $alertPrimary: #fb6e0026;
 $alertSuccess: #1bbc8626;
