--- a/src/components/FilledArrows/index.module.scss
+++ b/src/components/FilledArrows/index.module.scss
@@ -6,7 +6,8 @@
     margin: 4px 0 4px 2px;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
-    border-bottom: 5px solid $grey2;
+    border-bottom-width: 5px;
+    border-bottom-style: solid;
 }
 
 .__filled_down_arrow {
@@ -15,5 +16,6 @@
     margin: 4px 0 4px 2px;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
-    border-top: 5px solid $grey2;
+    border-top-width: 5px;
+    border-top-style: solid;
 }
