--- a/src/components/Input/index.module.scss
+++ b/src/components/Input/index.module.scss
@@ -2,12 +2,14 @@
 
 .input_container {
   width: 100%;
-  margin: 0 0 1rem 0;
+  margin: 0 0 1.2rem 0;
 
   label {
     font-size: 1rem;
     color: $black;
-    margin: 6px 0 0 0;
+    margin: 0.4285rem 0;
+    display: block;
+    line-height: 1em;
   }
 
   .border {
