--- a/src/pages/Login/index.module.scss
+++ b/src/pages/Login/index.module.scss
@@ -4,6 +4,7 @@
   margin: 50px 0 0 0;
   .form{
     margin-bottom: 3rem;
+    margin-top: 4.35rem;
   }
   .back_drop {
     background-color: rgba(0, 0, 0, 0.6);
@@ -75,7 +76,7 @@
 
     .content_card {
       background-color: $grey2;
-      margin: 0 auto;
+      margin: 1rem auto 0 auto !important;
       border-radius: 7px;
       transform: translate(0, -60%);
       box-shadow: 0px 12px 30px 3px rgba(0, 0, 0, 0.5);
