MLb Player swap

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -25,6 +25,7 @@ $lightBlack10: #6363633d;
 $lightBlack11: #292a2e;
 $lightBlack12: #00000024;
 $lightBlack13: #00000014;
+$lightBlack14: #00000066;
 $lightGrey: #303133;
 $lightGrey1: #d8d8d8;
 $lightGrey2: #c7cad1;
