--- a/src/components/SearchInput/index.module.scss
+++ b/src/components/SearchInput/index.module.scss
@@ -13,9 +13,10 @@
     border-radius: 12px;
     margin: 0 10px 0 0;
     width: 318px;
+    display: flex;
+    align-items: center;
 
     svg {
-      transform: translate(0, 10px);
       margin: 0 10px;
     }
 
