--- a/src/components/SportsLiveCard/index.module.scss
+++ b/src/components/SportsLiveCard/index.module.scss
@@ -165,6 +165,20 @@
         .single_view_cat {
           text-transform: uppercase;
         }
+
+        .single_view_pts {
+          display: flex;
+
+          .active {
+            color: $lightBlue;
+            font-weight: bold;
+          }
+
+          .xp_svg {
+            margin: 0 2px;
+            padding: 0;
+          }
+        }
       }
 
       .stat_points {
@@ -231,10 +245,16 @@
 
             &.team_d_width {
               width: 45px;
+              height: 40px;
             }
 
             &.large_view {
               width: 120px;
+              height: 50px;
+            }
+
+            &.large_view_d {
+              width: 70px;
               height: 50px;
             }
 
@@ -277,6 +297,21 @@
           display: flex;
           flex-direction: column;
           justify-content: space-between;
+
+          &.large_view {
+            min-height: 30px;
+            justify-content: flex-end;
+
+            svg {
+              margin: 0;
+              padding: 0;
+              display: flex;
+
+              &:first-child {
+                margin-bottom: 9px;
+              }
+            }
+          }
         }
       }
 
@@ -421,7 +456,7 @@
           max-height: 80px;
           display: flex;
           flex-direction: column;
-          overflow-y: scroll;
+          overflow-y: auto;
 
           &::-webkit-scrollbar {
             width: 5px;
@@ -595,6 +630,163 @@
         &:hover {
           cursor: pointer;
         }
+      }
+    }
+  }
+}
+
+.modal_container {
+  width: 1067px;
+  height: 88%;
+  background-color: $lightBlack;
+  box-shadow: 0 2px 24px 24px $black6;
+  border-radius: 16px;
+  padding: 38px 39px 51px 40px;
+
+  .modal_header {
+    width: 100%;
+    transform: translateY(5px);
+
+    .modal_header_top {
+      display: flex;
+      width: 100%;
+      justify-content: flex-end;
+      margin-bottom: 35px;
+      padding: 0 12px 0 0;
+
+      svg {
+        opacity: 0.7;
+
+        &:hover {
+          opacity: 1;
+          cursor: pointer;
+        }
+      }
+    }
+
+    .modal_header_bottom {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+      position: relative;
+
+      .modal_title {
+        font-family: Teko;
+        font-size: 52px;
+        text-transform: capitalize;
+
+        span {
+          font-family: Teko;
+          font-size: 52px;
+          text-transform: uppercase;
+        }
+      }
+
+      .modal_star_player_container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 240px;
+        height: 91px;
+        border-radius: 32px 32px 0 0;
+        box-shadow: inset 0 -22px 14px 0 $lightBlack8;
+        background-color: $black2;
+        position: absolute;
+        z-index: -1;
+        right: 5px;
+
+        img {
+          width: 68px;
+          height: 68px;
+        }
+
+        .star_player_right {
+          margin: 0 8px;
+
+          p {
+            font-family: Poppins;
+            font-size: 16px;
+            font-weight: 600;
+            margin-bottom: 5px;
+          }
+
+          svg {
+            width: 26px;
+            height: 26px;
+            margin: 0 10px 0 0;
+          }
+        }
+      }
+    }
+  }
+
+  .modal_body {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 986px;
+    height: 80%;
+    background-color: $black2;
+    margin-bottom: 20px;
+    border-radius: 11px;
+    position: relative;
+    padding: 0;
+
+    .modal_header {
+      width: 100%;
+      height: 78px;
+      background-color: $black;
+      border-radius: 11px 11px 0 0;
+      margin: 0;
+      top: -5px;
+      position: absolute;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 15px;
+
+      .header_left {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        p {
+          margin: 0;
+          padding: 0;
+          font-family: Poppins;
+          font-size: 16px;
+          font-weight: 600;
+        }
+
+        .header_player_name {
+          display: flex;
+          font-weight: 500;
+          color: $primary;
+          padding: 7px 12px;
+          border-radius: 8px;
+          background-color: $primaryLight5;
+          margin-left: 10px;
+
+          img {
+            width: 22px;
+            height: 22px;
+            margin-right: 3px;
+          }
+        }
+      }
+    }
+
+    .modal_list {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      padding: 0 20px;
+      overflow-y: auto;
+      height: 85%;
+      margin-top: 80px;
+
+      &::-webkit-scrollbar {
+        display: none;
       }
     }
   }
