my account menu implemented, cross icon added to my game center card, leave game modal implemented and logo changed on header and footer

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,6 +12,9 @@
   .__navlinks {
     list-style-type: none;
     margin: 0.66em 0;
+    .__my_account_li {
+      width: 150px;
+    }
     > li {
       margin: 0 1.5em;
       text-transform: uppercase;
