design the terms page

--- a/src/components/TermsAndConditions/terms.module.scss
+++ b/src/components/TermsAndConditions/terms.module.scss
@@ -9,6 +9,7 @@
 }
 .root{
     padding-right: 6.57rem;
+    scroll-behavior: smooth;
     overflow: auto;
     &::-webkit-scrollbar {
         width: 0.572rem;
@@ -25,56 +26,67 @@
             background-color: rgba(242, 242, 242, 0.09);
         }
     }
-}
-.section{
-    margin: 3.4rem 0;
-    h2{
-        font-size: 1.4286rem;
-        color: $primary;
-        margin: 0;
-        line-height: 1em;
-    }
-    p{
-        margin-top: 1.7rem;
-    }
-    h3{
-        margin: 1.7rem 0 0 0;
-        font-size: 1.2857rem;
-    }
-    h3 + p{
-        margin: 0;
-    }
-    b{
-        font-weight: 600;
-    }
-    ul{
-        list-style: none;
-        padding: 0;
-    }
-    li{
-        padding-left: 2em;
-        position: relative;
-    }
-    li::before{
-        content: "";
-        position: absolute;
-        left: 0.75em;
-        color: $primary;
-        top: 0.5em;
-        width: 0.5em;
-        height: 0.5em;
-        border-radius: 1em;
-        background: $primary;
+    section{
+        margin: 3.4rem 0;
+        &:last-child{
+            margin-bottom: 0;
+        }
+        h2{
+            font-size: 1.4286rem;
+            color: $primary;
+            margin: 0;
+        }
+        p{
+            margin-top: 1.7rem;
+        }
+        h3{
+            margin: 1.7rem 0 0 0;
+            font-size: 1.2857rem;
+            font-weight: 600;
+        }
+        h3 + p{
+            margin: 0;
+        }
+        b{
+            font-weight: 600;
+        }
+        ul{
+            list-style: none;
+            padding: 0;
+        }
+        li{
+            padding-left: 2em;
+            position: relative;
+        }
+        li::before{
+            content: "";
+            position: absolute;
+            left: 0.75em;
+            color: $primary;
+            top: 0.5em;
+            width: 0.5em;
+            height: 0.5em;
+            border-radius: 1em;
+            background: $primary;
+        }
     }
 }
 .notice{
     border-left: 0.2143em solid $primary;
-    line-height: 1em;
     display: flex;
     flex-direction: column;
-    gap: 0.6em;
     padding-left: 0.7em;
     margin-left: 0.7em;
     font-weight: 600;
     font-style: italic;
+    span{
+        position: relative;
+        line-height: 1.3em;
+        &:first-child{
+            top: -0.15em;
+        }
+        &:last-child{
+            bottom: -0.15em;
+        }
+    }
 }
