--- a/src/components/TermsAndConditions/Sidebar.scss
+++ b/src/components/TermsAndConditions/Sidebar.scss
@@ -17,12 +17,29 @@
         padding: 1rem 0;
         margin: 0;
         position: sticky;
-        top: 0;
+        bottom: 0;
+        overflow: auto;
+        &::-webkit-scrollbar {
+            width: 0.572rem;
+        }
+        &::-webkit-scrollbar-track {
+            background-color: rgba(242, 242, 242, 0.06);
+            border-radius: 1em;
+        }
+      
+        &::-webkit-scrollbar-thumb {
+            background-color: rgba(242, 242, 242, 0.06);
+            border-radius: 1em;
+            &:hover{
+                background-color: rgba(242, 242, 242, 0.09);
+            }
+        }
         a{
             display: block;
             font-size: 0.8571rem;
             padding: 0.934em 1.833em;
             border-left: 0.3333em solid transparent;
+            text-transform: capitalize;
         }
     }
 }
