--- a/src/components/Footer/index.module.scss
+++ b/src/components/Footer/index.module.scss
@@ -1,47 +1,44 @@
 @import '../../scss/colors.scss';
 
 .root{
-    padding: 4em 15%;
-    display: grid;
-    grid-template-columns: auto 1fr;
     background: linear-gradient(to bottom, $lightBlack, $black);
-    &.style_2{
-        background: $black2;
-    }
+    background: $black2;
+}
+.container{
+    padding: 2.7143rem 0;
+    max-width: 57.1428rem;
+    width: 90%;
+    margin: auto;
+}
+.logo{
+    width: 15.9285rem;
+    position: relative;
+    left: -0.5rem;
 }
 .linksWrapper{
     display: grid;
     grid-template-columns: auto auto auto;
+    justify-content: space-between;
     gap: 1em;
-    margin-left: 10%;
+    margin: 1.6428rem 0 2.8571rem 0;
     a{
         font-weight: 600;
     }
 }
 .copyWriteSection{
-    grid-column: span 2;
     text-align: center;
-    margin-top: 2.5rem;
     font-size: 0.8571rem;
     line-height: 1.6em;
     letter-spacing: 0.125em;
+    margin: 0;
 }
 
 @media (max-width: 800px) {
-    .root{
-        grid-template-columns: 1fr;
-        gap: 2rem;
-    }
     .linksWrapper{
         grid-template-columns: 1fr;
         text-align: center;
-        margin: 0;
-    }
-    .copyWriteSection{
-        grid-column: span 1;
-        margin: 0;
-    }
-    span{
-        display: none;
+        span{
+            display: none;
+        }
     }
 }
