--- a/src/components/SearchInput/index.module.scss
+++ b/src/components/SearchInput/index.module.scss
@@ -54,17 +54,14 @@
       padding: 3px;
       display: inline-block;
       width: 8px;
-      //   margin: 0 0 0 calc(150 * 0.2);
     }
 
     .down {
       transform: rotate(45deg) translate(36px, -37px);
-      //   transition: transform 0.1s;
     }
 
     .up {
       transform: rotate(-135deg) translate(-36px, 37px);
-      //   transition: transform 0.1s;
     }
 
     .search_dropdown_menu {
@@ -74,7 +71,8 @@
       background-color: $lightBlack5;
       width: 100%;
       border-radius: 0 0 12px 12px;
-      transform: translate(0%, 110px);
+      top: 53px;
+      right: 0;
       font-size: 14px;
       z-index: 5;
       text-align: center;
@@ -97,6 +95,351 @@
         &.active {
           cursor: default;
           background-color: $darkblack;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1900px) {
+  .search_form {
+    width: 50%;
+
+    span {
+      background-color: $lightBlack5;
+      padding: 6px 15px;
+      width: 518px;
+
+      svg {
+        width: 20px;
+        height: 20px;
+      }
+
+      input {
+        height: 50px;
+        font-size: 18px;
+      }
+    }
+
+    .search_dropdown {
+      padding: 18px 20px 18px 10px;
+      border-radius: 12px;
+      font-size: 18px;
+      width: 180px;
+      position: relative;
+
+      .arrow {
+        border-width: 0 3px 3px 0;
+        padding: 4px;
+        right: 3.3em;
+      }
+
+      .down {
+        transform: rotate(45deg) translate(33px, -35px);
+      }
+
+      .up {
+        transform: rotate(-135deg) translate(-36px, 30px);
+      }
+
+      .search_dropdown_menu {
+        font-size: 18px;
+        z-index: 9999;
+
+        span {
+          width: 100%;
+          padding: 13px 30px;
+          border-radius: 0;
+
+          &:last-child {
+            border-radius: 0 0 12px 12px;
+          }
+
+          &:hover {
+            cursor: pointer;
+            background-color: $darkblack;
+            transition: background-color 1s;
+          }
+
+          &.active {
+            cursor: default;
+            background-color: $darkblack;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1680px) {
+  .search_form {
+    width: 50%;
+
+    span {
+      background-color: $lightBlack5;
+      padding: 3px 15px;
+      width: 518px;
+
+      svg {
+        width: 20px;
+        height: 20px;
+      }
+
+      input {
+        height: 50px;
+        font-size: 18px;
+      }
+    }
+
+    .search_dropdown {
+      padding: 14px 20px 14px 10px;
+      border-radius: 12px;
+      font-size: 16px;
+      width: 180px;
+      position: relative;
+
+      .arrow {
+        right: 3.7em;
+      }
+
+      .down {
+        transform: rotate(45deg) translate(33px, -35px);
+      }
+
+      .up {
+        transform: rotate(-135deg) translate(-36px, 30px);
+      }
+
+      .search_dropdown_menu {
+        font-size: 16px;
+        z-index: 9999;
+        top: 43px;
+
+        span {
+          width: 100%;
+          padding: 13px 30px;
+          border-radius: 0;
+
+          &:last-child {
+            border-radius: 0 0 12px 12px;
+          }
+
+          &:hover {
+            cursor: pointer;
+            background-color: $darkblack;
+            transition: background-color 1s;
+          }
+
+          &.active {
+            cursor: default;
+            background-color: $darkblack;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1440px) {
+  .search_form {
+    span {
+      background-color: $lightBlack5;
+      padding: 2px 10px;
+      width: 480px;
+
+      svg {
+        width: 16px;
+        height: 16px;
+      }
+
+      input {
+        height: 45px;
+        font-size: 16px;
+      }
+    }
+
+    .search_dropdown {
+      padding: 13px 20px 13px 10px;
+      font-size: 14px;
+      width: 150px;
+
+      .arrow {
+        right: 4em;
+        border-width: 0 2px 2px 0;
+        padding: 3px;
+      }
+
+      .down {
+        transform: rotate(45deg) translate(33px, -35px);
+      }
+
+      .up {
+        transform: rotate(-135deg) translate(-36px, 30px);
+      }
+
+      .search_dropdown_menu {
+        font-size: 14px;
+        top: 38px;
+
+        span {
+          width: 100%;
+          padding: 13px 30px;
+          border-radius: 0;
+
+          &:last-child {
+            border-radius: 0 0 12px 12px;
+          }
+
+          &:hover {
+            cursor: pointer;
+            background-color: $darkblack;
+            transition: background-color 1s;
+          }
+
+          &.active {
+            cursor: default;
+            background-color: $darkblack;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1326px) {
+  .search_form {
+    width: 47%;
+
+    span {
+      padding: 2px 7px;
+      width: 300px;
+
+      svg {
+        margin: 0 7px;
+        width: 14px;
+        height: 14px;
+      }
+
+      input {
+        height: 40px;
+        font-size: 12px;
+      }
+    }
+
+    .search_dropdown {
+      padding: 12px 15px 12px 8px;
+      font-size: 12px;
+      width: 130px;
+
+      .arrow {
+        right: 4.4em;
+        border-width: 0 2px 2px 0;
+        width: 3px;
+      }
+
+      .down {
+        transform: rotate(45deg) translate(32px, -33px);
+      }
+
+      .up {
+        transform: rotate(-135deg) translate(-34px, 30px);
+      }
+
+      .search_dropdown_menu {
+        font-size: 12px;
+        text-align: center;
+        top: 33px;
+
+        span {
+          width: 100%;
+          padding: 13px 30px;
+          border-radius: 0;
+
+          &:last-child {
+            border-radius: 0 0 12px 12px;
+          }
+
+          &:hover {
+            cursor: pointer;
+            background-color: $darkblack;
+            transition: background-color 1s;
+          }
+
+          &.active {
+            cursor: default;
+            background-color: $darkblack;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  @media (max-width: 1326px) {
+    .search_form {
+      width: 50%;
+
+      span {
+        padding: 1px 7px;
+        width: 70%;
+
+        svg {
+          margin: 0 7px;
+          width: 12px;
+          height: 12px;
+        }
+
+        input {
+          height: 35px;
+          font-size: 12px;
+        }
+      }
+
+      .search_dropdown {
+        padding: 10px 15px 10px 8px;
+        font-size: 12px;
+        width: 35%;
+
+        .arrow {
+          right: 4.4em;
+          border-width: 0 2px 2px 0;
+          width: 2px;
+        }
+
+        .down {
+          transform: rotate(45deg) translate(32px, -33px);
+        }
+
+        .up {
+          transform: rotate(-135deg) translate(-34px, 30px);
+        }
+
+        .search_dropdown_menu {
+          font-size: 12px;
+          text-align: center;
+          top: 27px;
+
+          span {
+            width: 100%;
+            padding: 13px 30px;
+            border-radius: 0;
+
+            &:last-child {
+              border-radius: 0 0 12px 12px;
+            }
+
+            &:hover {
+              cursor: pointer;
+              background-color: $darkblack;
+              transition: background-color 1s;
+            }
+
+            &.active {
+              cursor: default;
+              background-color: $darkblack;
+            }
+          }
         }
       }
     }
