design the responsible gaming screen

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,6 +8,8 @@
   width: 100%;
   .__brand-logo > img {
     width: 7.142em;
+    position: relative;
+    top: 0.2em;
   }
   .__navlinks {
     list-style-type: none;
